Portrait image for the issue intro section on mobile

--- a/app/static/features/covid19/_styles.sass
+++ b/app/static/features/covid19/_styles.sass
@@ -941,6 +941,12 @@ p > a
   .txt-source
     border: 1px solid $color-hl
 
+  #scroll-item-intro
+    height: auto
+
+    .img-pan
+      max-height: none
+
 @keyframes prompt
   to
     color: $color-dk
